[package]
name = "retodos"
description = "Manage your ToDos stored in Redis."

version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.8", features = ["derive"] }
chrono = "0.4.19"
redis = "0.21.5"
