[package]
name = "retodos"
description = "Manage your ToDos stored in Redis."

version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
chrono = "0.4.42"
chrono-english = "0.1.8"
redis = "1.0"
